in this commit resolve slider issue and footer responsive

--- a/index.html
+++ b/index.html
@@ -739,6 +739,9 @@
             </div>
 
         </div>
+
+
+
         <div id="development_Teams" class="paddingTB">
             <div class="container">
                 <div class="section_heading">
@@ -837,7 +840,7 @@
         <div id="footer" class="paddingTB">
             <div class="container">
                 <div class="col-11 offset-1">
-                    <div class="row">
+                    <div class="row justify-content-sm-center">
                         <div class="col-lg-3 col-6">
                             <ul>
                                 <li>
@@ -1088,7 +1091,7 @@
                 <div id="main_footer">
                    
                         <div class="row my-auto">
-                            <div class="col-lg-6 col-12 my-auto " >
+                            <div class="col-lg-6 col-12 my-auto d-flex justify-content-sm-center" >
                                    <div class="f_right my-auto">
                                        <div class="f_image my-auto">
                                             <img src="./assets/images/footerlogo.png" alt=""/>
@@ -1100,7 +1103,7 @@
                                        </div>
                                    </div>
                             </div>
-                            <div class="col-lg-6 col-12 d-flex my-auto justify-content-end social_icons ">
+                            <div class="col-lg-6 col-12 d-flex my-auto justify-content-lg-end social_icons justify-content-sm-center">
                                     <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                     <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                     <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
